--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -217,9 +217,9 @@ right: 10px;
   font-size: 30px;
 }
 
-#form-box {
+#form-box-login {
   background-color: rgba(0, 0, 0, .8);
-  height: 340px;
+  height: 350px;
   width: 400px;
   margin: 0 auto;
   border-radius: 10px;
@@ -227,15 +227,38 @@ right: 10px;
 
 }
 
-#form-box h1 {
+#form-box-login h1 {
 }
 
-#form-box p {
+#form-box-login p {
   color: #A0A0A0 ;
   text-align: center;
   font-size: 20px;
+  font-family: 'Poiret One', cursive;
   /*margin: 0px;*/
 }
+
+#form-box-signup {
+  background-color: rgba(0, 0, 0, .8);
+  height: 350px;
+  width: 400px;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 1px 13px 33px black;
+
+}
+
+#form-box-signup h1 {
+}
+
+#form-box-signup p {
+  color: #A0A0A0 ;
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Poiret One', cursive;
+  /*margin: 0px;*/
+}
+
 
 
 .buttons {
