Testing out git package in sublime

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -65,7 +65,7 @@
     <div class="bodypart" id="Abdominals">
     </div>
     <!-- Right arm -->
-    <div class="bodypart" id="Right-Arm">
+    <div class="bodypart" id="Rig<%= f.text_area :attribute %>ht-Arm">
     </div>
     <!-- Left arm -->
     <div class="bodypart" id="Left-Arm">
@@ -165,6 +165,9 @@
 
 
 
+<!<% #flash.each do |key, value| %>
+  <!-- <div class="flash"><%= value %><br></div>
+<!<% #end %>
 
 
 
