--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -188,6 +188,7 @@ right: 10px;
 
 .flash {
   background-color: white;
+  margin-top: 30px;
 
 }
 
@@ -240,7 +241,7 @@ right: 10px;
 
 #form-box-signup {
   background-color: rgba(0, 0, 0, .8);
-  height: 350px;
+  height: 428px;
   width: 400px;
   margin: 0 auto;
   border-radius: 10px;
