--- a/app/assets/stylesheets/arm.css.erb
+++ b/app/assets/stylesheets/arm.css.erb
@@ -2,34 +2,37 @@
 
   height: 400px;
   width: 60px;
-  background-color: red;
+  /*background-color: black;*/
   position: absolute;
   top: 153px;
   right: 300px;
   -webkit-transform: rotate(-8deg);
-  opacity: 0;
+  opacity: .7;
   border-radius: 50px;
 }
 
 #Right-Arm:hover {
-  opacity: .6
+  opacity: 1;
+  cursor: pointer;
+
 }
 
 #Left-Arm {
 
   height: 400px;
   width: 60px;
-  background-color: red;
+  /*background-color: ;*/
   position: absolute;
   top: 152px;
   left: 525px;
   -webkit-transform: rotate(9deg);
-  opacity: 0;
+  opacity: .7;
   border-radius: 50px;
 }
 
 #Left-Arm:hover {
-  opacity: .6
+  cursor: pointer;
+  opacity: 1;
 }
 
 
@@ -46,14 +49,15 @@ height: 680px;
   width: 100px;
   border-radius: 40px;
   position: absolute;
-  opacity: 0;
+  opacity: .7;
   background-color: red;
   left: 680px;
   top: 180px;
 }
 
 #Shoulder:hover {
-  opacity: .6;
+  cursor: pointer;
+  opacity: 1;
 }
 
 
@@ -65,12 +69,13 @@ background-color: red;
 top: 280px;
 right: 666px;
 border-radius: 65px;
-opacity: 0;
+opacity: .7;
 
 }
 
 #Bicep:hover {
-opacity: .6;
+opacity: 1;
+cursor: pointer;
 
 }
 
@@ -84,12 +89,13 @@ position: absolute;
 left: 680px;
 top: 240px;
 border-radius: 40px;
-opacity: 0;
+opacity: .7;
 
 }
 
 #Tricep:hover {
-opacity: .6;
+opacity: 1;
+cursor: pointer;
 
 }
 
