--- a/app/assets/stylesheets/chest.css.erb
+++ b/app/assets/stylesheets/chest.css.erb
@@ -16,8 +16,8 @@ img {
 #Left-Chest {
   height: 120px;
   width: 95px;
-  background-color: red;
-  opacity: 0;
+  /*background-color: red;*/
+  opacity: 1;
   position: absolute;
   top: 170px;
   /*left: 42.5%;*/
@@ -35,8 +35,8 @@ img {
 #Right-Chest {
   height: 120px;
   width: 96px;
-  background-color: red;
-  opacity: 0;
+  /*background-color: red;*/
+  opacity: 1;
   position: absolute;
   top: 170px;
   /*right: 617px;*/
