--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -2,11 +2,11 @@
 
   height: 159px;
   width: 117px;
-  background-color: red;
+  /*background-color: red;*/
   position: absolute;
   top: 540px;
   left: 579px;
-  opacity: 0;
+  opacity: 1;
   border-radius: 100px
 }
 
@@ -18,11 +18,11 @@
 
   height: 159px;
   width: 104px;
-  background-color: red;
+  /*background-color: red;*/
   position: absolute;
   top: 540px;
   right: 594px;
-  opacity: 0;
+  opacity: 1;
   border-radius: 100px;
 }
 
@@ -44,7 +44,7 @@
 
   height: 239px;
   width: 93px;
-  background-color: red;
+  /*background-color: red;*/
   position: absolute;
   top: 168px;
   left: 674px;
@@ -60,7 +60,7 @@
 #Tibialis {
 height: 193px;
 width: 49px;
-background-color: red;
+/*background-color: red;*/
 position: absolute;
 bottom: 118px;
 left: 713px;
