--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -34,7 +34,7 @@ body {
 }
 
 header {
-  background-color: black;
+  background-color: white;
   margin: 0px;
 
 }
@@ -286,32 +286,89 @@ right: 10px;
 }
 
 #container {
-  margin-top: 20px;
+  margin-top: 80px;
   margin-left: 30px;
   position: relative;
-  background: #45453f;
+  background: red;
+  /*top: 20px;*/
+}
+
+#abdominals-dot {
+  margin-top: 60px;
+  margin-left: 40px;
+  position: relative;
+  background: red;
+  /*top: 20px;*/
+}
+
+#left-chest-dot {
+  margin-top: 40px;
+  margin-left: 30px;
+  position: relative;
+  background: red;
+  /*top: 20px;*/
+}
+
+#right-chest-dot {
+  margin-top: 40px;
+  margin-left: 30px;
+  position: relative;
+  background: red;
+  /*top: 20px;*/
+}
+
+#right-arm-dot {
+  margin-top: 80px;
+  margin-left: 30px;
+  position: relative;
+  background: red;
+  /*top: 20px;*/
+}
+
+#left-arm-dot {
+  margin-top: 80px;
+  margin-left: 10px;
+  position: relative;
+  background: red;
+  /*top: 20px;*/
+}
+
+#left-leg-dot {
+  margin-top: 60px;
+  margin-left: 50px;
+  position: relative;
+  background: red;
+  /*top: 20px;*/
+}
+
+#right-leg-dot {
+  margin-top: 60px;
+  margin-left: 50px;
+  position: relative;
+  background: red;
+  /*top: 20px;*/
 }
 
 .pulse {
-  width: 10px;
-  height: 10px;
-  border: 5px solid black;
+  width: 17px;
+  height: 17px;
+  border: 5px solid red;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
-  background-color: #716f42;
+  background-color: red;
   z-index: 10;
   position: absolute;
 }
 
 .dot {
-  border: 10px solid #fff601;
+  border: 10px solid red;
   background: transparent;
   -webkit-border-radius: 60px;
   -moz-border-radius: 60px;
   border-radius: 60px;
-  height: 70px;
-  width: 70px;
+  height: 67px;
+  width: 67px;
   -webkit-animation: pulse 3s ease-out;
   -moz-animation: pulse 3s ease-out;
   animation: pulse 3s ease-out;
@@ -319,8 +376,8 @@ right: 10px;
   -moz-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
   position: absolute;
-  top: -30px;
-  left: -30px;
+  top: -25px;
+  left: -25px;
   z-index: 1;
   opacity: 0;
 }
@@ -370,3 +427,30 @@ right: 10px;
     opacity: 0.0;
  }
 }
+
+
+#header-nav {
+  list-decoration: none;
+  margin: 0px;
+  text-align: center;
+  margin-right: 130px;
+}
+
+#header-nav li {
+  display: inline-block;
+  margin: 10px;
+  border: 5px solid black;
+  padding: 5px;
+  text-align: center;
+}
+
+#header-nav h1 {
+  margin: 0px;
+}
+
+#header-nav a {
+  text-decoration: none;
+  color: black;
+  /*float: right;*/
+}
+
