fixing positioning of pulsing dots and removing bodypart divs

--- a/app/assets/stylesheets/arm.css.erb
+++ b/app/assets/stylesheets/arm.css.erb
@@ -1,7 +1,7 @@
 #Right-Arm {
 
-  height: 400px;
-  width: 60px;
+  /*height: 400px;*/
+  /*width: 60px;*/
   /*background-color: black;*/
   position: absolute;
   top: 153px;
