--- a/app/assets/stylesheets/chest.css.erb
+++ b/app/assets/stylesheets/chest.css.erb
@@ -14,10 +14,10 @@ img {
 }
 
 #Left-Chest {
-  height: 120px;
-  width: 95px;
+  /*height: 120px;*/
+  /*width: 95px;*/
   /*background-color: red;*/
-  opacity: 1;
+  opacity: .7;
   position: absolute;
   top: 170px;
   /*left: 42.5%;*/
@@ -27,16 +27,17 @@ img {
 
 
 #Left-Chest:hover {
-  opacity: .6;
+  opacity: 1;
+  cursor: pointer;
 
 
 }
 
 #Right-Chest {
-  height: 120px;
-  width: 96px;
+  /*height: 120px;*/
+  /*width: 96px;*/
   /*background-color: red;*/
-  opacity: 1;
+  opacity: .7;
   position: absolute;
   top: 170px;
   /*right: 617px;*/
@@ -45,7 +46,8 @@ img {
 }
 
 #Right-Chest:hover {
-  opacity: .6;
+  opacity: 1;
+  cursor: pointer;
 
 
 }
