--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -1,33 +1,35 @@
 #Left-Leg {
 
-  height: 159px;
-  width: 117px;
+  /*height: 159px;*/
+  /*width: 117px;*/
   /*background-color: red;*/
   position: absolute;
   top: 540px;
   left: 579px;
-  opacity: 1;
+  opacity: .7;
   border-radius: 100px
 }
 
 #Left-Leg:hover {
-  opacity: .6
+  opacity: 1;
+  cursor: pointer;
 }
 
 #Right-Leg {
 
-  height: 159px;
-  width: 104px;
+  /*height: 159px;*/
+  /*width: 104px;*/
   /*background-color: red;*/
   position: absolute;
   top: 540px;
   right: 594px;
-  opacity: 1;
+  opacity: .7;
   border-radius: 100px;
 }
 
 #Right-Leg:hover {
-  opacity: .6
+  opacity: 1;
+  cursor: pointer;
 }
 
 #leg-text {
