--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -86,6 +86,12 @@
       </div>
     </div>
 
+    <div id="arm-image-preview-container">
+    <h1 style="text-align:center;">Arm</h1>
+    <%= image_tag "arm-preview.png", :id => "arm-preview-image" %>
+    </div>
+
+
     <!-- Left arm -->
     <div class="bodypart" id="Left-Arm">
       <div id="left-arm-dot">
