--- a/app/assets/stylesheets/abdominals.css
+++ b/app/assets/stylesheets/abdominals.css
@@ -1,17 +1,19 @@
 #Abdominals {
-  height: 250px;
-  width: 110px;
+  /*height: 250px;*/
+  /*width: 110px;*/
   /*background-color: black;*/
   position: absolute;
   left: 657px;
   top: 300px;
-  opacity: 1;
+  opacity: .7;
   border-radius: 50px;
 }
 
 
 #Abdominals:hover {
-  opacity: .6
+  cursor: pointer;
+  opacity: 1;
+
 }
 
 #abdominals-text {
