--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -318,17 +318,21 @@ right: 10px;
 }
 
 #right-arm-dot {
+  position: absolute;
+  top: 70px;
+  right: 80px;
   margin-top: 80px;
   margin-left: 30px;
-  position: relative;
+  /*position: relative;*/
   background: red;
   /*top: 20px;*/
 }
 
 #left-arm-dot {
+  top: 70px;
   margin-top: 80px;
   margin-left: 10px;
-  position: relative;
+  position: absolute;
   background: red;
   /*top: 20px;*/
 }
@@ -343,8 +347,9 @@ right: 10px;
 
 #right-leg-dot {
   margin-top: 60px;
-  margin-left: 50px;
-  position: relative;
+  margin-left: 80px;
+  position: absolute;
+  right: 60px;
   background: red;
   /*top: 20px;*/
 }
@@ -369,9 +374,9 @@ right: 10px;
   border-radius: 60px;
   height: 67px;
   width: 67px;
-  -webkit-animation: pulse 3s ease-out;
-  -moz-animation: pulse 3s ease-out;
-  animation: pulse 3s ease-out;
+  -webkit-animation: pulse 1.4s ease-out;
+  -moz-animation: pulse 1.4s ease-out;
+  animation: pulse 1.4s ease-out;
   -webkit-animation-iteration-count: infinite;
   -moz-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
@@ -453,4 +458,24 @@ right: 10px;
   color: black;
   /*float: right;*/
 }
+
+#arm-image-preview-container {
+  background-color:white;
+  height: 360px;
+  width: 180px;
+  position: absolute;
+  text-align:center;
+  top:200px;
+  right:300px;
+  border: 2px solid black;
+
+}
+
+#arm-preview-image {
+  height: 280px;
+  width: 160px;
+  margin: 0 auto;
+
+}
+
 
