adding in arm and leg preview

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,7 +28,7 @@
 
     <%= image_tag "armedit3.png", :class => "arm-image" %>
     <%= image_tag "rearlegedit.png", :class => "rear-leg-image" %>
-    <%= image_tag "frontleg.png", :class => "front-leg-image" %>
+    <%= image_tag "front-leg-final.png", :class => "front-leg-image" %>
 
   <!--  <%= image_tag "leftchest.png", :class => "leftchest"%>
    -->
@@ -114,6 +114,12 @@
       <div class="pulse"></div>
       </div>
     </div>
+
+    <div id="leg-image-preview-container">
+    <h1 style="text-align:center;">Leg</h1>
+    <%= image_tag "leg-preview.png", :id => "leg-preview-image" %>
+    </div>
+
 
     <div class="bodypart" id="Shoulder">
     </div>
