--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -462,7 +462,7 @@ right: 10px;
 #arm-image-preview-container {
   background-color:white;
   height: 360px;
-  width: 180px;
+  width: 130px;
   position: absolute;
   text-align:center;
   top:200px;
@@ -473,9 +473,28 @@ right: 10px;
 
 #arm-preview-image {
   height: 280px;
-  width: 160px;
+  width: 110px;
   margin: 0 auto;
 
 }
 
 
+#leg-image-preview-container {
+  background-color:white;
+  height: 360px;
+  width: 120px;
+  position: absolute;
+  text-align:center;
+  top:200px;
+  left:300px;
+  border: 2px solid black;
+
+
+}
+
+#leg-preview-image {
+  height: 280px;
+  width: 100px;
+  margin: 0 auto;
+
+}
