adding in all dots for all body parts

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -354,6 +354,120 @@ right: 10px;
   /*top: 20px;*/
 }
 
+#bicep-dot {
+  margin-top: 40px;
+  margin-left: 40px;
+  position: relative;
+  background: red;
+  bottom: 20px;
+  right: 27px;
+}
+
+#tricep-dot {
+  margin-top: 40px;
+  margin-left: 40px;
+  position: absolute;
+  background: red;
+  bottom: -38px;
+  right: -3px;
+
+}
+
+#shoulder-dot {
+  position: absolute;
+  background: red;
+  bottom: -28px;
+  right: -35px;
+
+}
+
+#forearm-dot {
+  position: absolute;
+  background: red;
+  bottom: -28px;
+  right: -35px;
+
+}
+
+#quad-dot {
+  position: absolute;
+  background: red;
+  bottom: -68px;
+  right: -15px;
+}
+
+#tibialis-dot {
+  position: absolute;
+  background: red;
+  bottom: 202px;
+  right: -15px;
+}
+
+#hamstring-dot {
+  position: absolute;
+  background: red;
+  bottom: -188px;
+  right: -45px;
+}
+
+
+
+#calf-dot {
+  position: absolute;
+  background: red;
+  bottom: 202px;
+  right: -15px;
+
+}
+
+#right-glute-dot {
+ position: absolute;
+background: red;
+bottom: 92px;
+right: 55px;
+
+}
+#left-glute-dot {
+  position: absolute;
+background: red;
+bottom: 92px;
+right: 41px;
+}
+#right-lat-dot {
+position: absolute;
+background: red;
+bottom: -24px;
+right: 25px;
+}
+#left-lat-dot {
+  position: absolute;
+background: red;
+bottom: -38px;
+right: -15px;
+}
+
+#trapezius-dot {
+ position: absolute;
+background: red;
+bottom: 20px;
+right: 82px;
+}
+
+#rhomboids-dot {
+  position: absolute;
+background: red;
+bottom: -18px;
+right: -68px;
+}
+
+#lowerback-dot {
+  position: absolute;
+background: red;
+bottom: 92px;
+right: 58px
+}
+
+
 .pulse {
   width: 17px;
   height: 17px;
@@ -374,9 +488,9 @@ right: 10px;
   border-radius: 60px;
   height: 67px;
   width: 67px;
-  -webkit-animation: pulse 1.4s ease-out;
-  -moz-animation: pulse 1.4s ease-out;
-  animation: pulse 1.4s ease-out;
+  -webkit-animation: pulse 1s ease-out;
+  -moz-animation: pulse 1s ease-out;
+  animation: pulse 1s ease-out;
   -webkit-animation-iteration-count: infinite;
   -moz-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
