--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -44,58 +44,66 @@
 
 #Quad {
 
-  height: 239px;
-  width: 93px;
+  /*height: 239px;*/
+  /*width: 93px;*/
   /*background-color: red;*/
   position: absolute;
   top: 168px;
   left: 674px;
   border-radius: 90px;
-  opacity: 0;
+  opacity: .7;
   -webkit-transform: rotate(-7deg);
 }
 
 #Quad:hover {
-  opacity: .6;
+  opacity: 1;
+  cursor: pointer;
 }
 
 #Tibialis {
-height: 193px;
-width: 49px;
+/*height: 193px;*/
+/*width: 49px;*/
 /*background-color: red;*/
 position: absolute;
 bottom: 118px;
 left: 713px;
 border-radius: 50px;
-opacity: 0;
+opacity: .7;
 -webkit-transform: rotate(-5deg);
 
 }
 
 #Tibialis:hover {
-  opacity: .6;
+  opacity: 1;
+  cursor: pointer;
 }
 
 #Hamstring {
 
-  height: 300px;
-width: 100px;
+  /*height: 300px;*/
+/*width: 100px;*/
 border-radius: 50px;
 background-color: red;
-opacity: 0;
+opacity: .7;
 position: absolute;
 top: 90px;
 left: 669px;
 -webkit-transform: rotate(3deg);
 }
 
+#Hamstring:hover {
+  opacity:1;
+  cursor: pointer;
+}
+
+
 #Calve {
 
-  height: 230px;
-width: 50px;
+  /*height: 230px;*/
+/*width: 50px;*/
 border-radius: 50px;
 background-color: red;
-opacity: 0;
+opacity: .7;
 position: absolute;
 bottom: 122px;
 left: 687px;
@@ -103,12 +111,10 @@ left: 687px;
 }
 
 #Calve:hover {
-  opacity: .6;
+  opacity: 1;
+  cursor: pointer;
 }
 
-#Hamstring:hover {
-  opacity: .6
-}
 
 
 
