--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -58,6 +58,7 @@
 
   <%= image_tag "torsoedit2.png", :class => "torso" %>
     <!-- Left chest -->
+
     <div class="bodypart" id="Left-Chest">
       <div id="left-chest-dot">
       <div class="dot"></div>
@@ -66,6 +67,7 @@
     </div>
     <!-- Right chest -->
     <div class="bodypart" id="Right-Chest">
+
       <div id="right-chest-dot">
       <div class="dot"></div>
       <div class="pulse"></div>
@@ -122,51 +124,114 @@
 
 
     <div class="bodypart" id="Shoulder">
+      <div id="shoulder-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Bicep -->
     <div class="bodypart" id="Bicep">
+      <div id="bicep-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Tricep -->
     <div class="bodypart" id="Tricep">
+      <div id="tricep-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Forearm -->
     <div class="bodypart" id="Forearm">
+      <div id="forearm-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Quad -->
     <div class="bodypart" id="Quad">
+      <div id="quad-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Tibialis -->
     <div class="bodypart" id="Tibialis">
+      <div id="tibialis-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Hamstring -->
     <div class="bodypart" id="Hamstring">
+      <div id="hamstring-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Calve -->
     <div class="bodypart" id="Calve">
+      <div id="calf-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Right glute -->
     <div class="bodypart" id="Right-Glute">
+      <div id="right-glute-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Left glute  -->
     <div class="bodypart" id="Left-Glute">
+      <div id="left-glute-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Left lat -->
     <div class="bodypart" id="Left-Lat">
+      <div id="left-lat-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
     <!-- Right lat -->
     <div class="bodypart" id="Right-Lat">
+      <div id="right-lat-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
 
     <div class="bodypart" id="Trapezius">
+      <div id="trapezius-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
 
     <div class="bodypart" id="Rhomboids">
+      <div id="rhomboids-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
 
     <div class="bodypart" id="Lower-Back">
+      <div id="lowerback-dot">
+      <div class="dot"></div>
+      <div class="pulse"></div>
+      </div>
     </div>
 
 <!-- <h1 class="rear" id="rear-torso-text"> Back </h1> -->
+       <h2 style="color:white;margin:0px;text-align:center;">back view</h2>
+       <img style="height:30px;width:30px;" src="assets/return.png">
+
   <h1 class="rear" id="rear-leg-text"> Rear Leg </h1>
 
   </body>
