--- a/app/assets/stylesheets/arm.css.erb
+++ b/app/assets/stylesheets/arm.css.erb
@@ -45,8 +45,8 @@ height: 680px;
 }
 
 #Shoulder {
-  height: 110px;
-  width: 100px;
+  /*height: 110px;*/
+  /*width: 100px;*/
   border-radius: 40px;
   position: absolute;
   opacity: .7;
@@ -62,13 +62,13 @@ height: 680px;
 
 
 #Bicep {
-height: 120px;
-width: 36px;
+/*height: 120px;*/
+/*width: 36px;*/
 position: absolute;
-background-color: red;
+/*background-color: red;*/
 top: 280px;
 right: 666px;
-border-radius: 65px;
+/*border-radius: 65px;*/
 opacity: .7;
 
 }
@@ -82,8 +82,8 @@ cursor: pointer;
 
 
 #Tricep {
-height: 158px;
-width: 33px;
+/*height: 158px;*/
+/*width: 33px;*/
 background-color: red;
 position: absolute;
 left: 680px;
@@ -102,19 +102,20 @@ cursor: pointer;
 
 
 #Forearm {
-height: 180px;
-width: 60px;
-background-color: red;
+/*height: 180px;*/
+/*width: 60px;*/
+/*background-color: red;*/
 position: absolute;
 top: 380px;
 left: 700px;
 border-radius: 40px;
-opacity: 0;
+opacity: .7;
 
 }
 
 #Forearm:hover {
-opacity: .6;
+opacity: 1;
+cursor: pointer;
 
 }
 
