--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -23,6 +23,17 @@
   src: url("secretcode.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: Oswald;
+  src: url("Oswald-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: Poiret One;
+  src: url("PoiretOne-Regular.ttf") format("truetype");
+}
+
+
 body {
   background-image: url("background-barbell.jpg") ;
   /*background-repeat: none;*/
@@ -40,7 +51,6 @@ header {
 }
 
 #logo {
-  font-family: 'Frijole', cursive;
   color: white;
   text-align: left;
   /*font-size: 45px;*/
@@ -56,7 +66,6 @@ header {
 }
 
 .rear {
-  font-family: 'Frijole', cursive;
   color: white;
   font-size: 45px;
   text-align: center;
@@ -73,7 +82,6 @@ header {
 }
 
 #bodypart-text {
-  font-family: 'Frijole', cursive;
   color: white;
   z-index: 1;
 }
@@ -96,13 +104,11 @@ header {
   display: block;
   margin: 10 px;
   font-size: 20px;
-  font-family: 'Frijole', cursive;
 }
 
 /*#sign-up-form {
   color: white;
   font-size: 14px;
-  font-family: 'Frijole', cursive;
   margin-left: 30px;
   margin-top: 60px;
 }
@@ -110,7 +116,6 @@ header {
 #login-form {
   color: white;
   font-size: 14px;
-  font-family: 'Frijole', cursive;
   margin-left: 30px;
   margin-top: 30px ;
 
@@ -611,4 +616,30 @@ right: 58px
   width: 100px;
   margin: 0 auto;
 
+}
+
+#back-view {
+  color:white;
+  margin:0px;
+  text-align:center;
+
+}
+
+#back-view:hover {
+  cursor: pointer;
+
+}
+
+#back-view img {
+  border: white;
+}
+
+.text-preview {
+  margin:0 auto;
+  text-align:center;
+  border:2px solid black;
+  display:inline-block;
+  padding: 1px 5px 1px 5px;
+  color: red;
+  font-weight: bold;
 }
