--- a/app/assets/stylesheets/glutes.css
+++ b/app/assets/stylesheets/glutes.css
@@ -11,6 +11,7 @@
 
 #Right-Glute:hover {
   opacity: 1;
+  cursor: pointer;
 }
 
 #Left-Glute {
@@ -26,4 +27,5 @@
 
 #Left-Glute:hover {
   opacity: 1;
+  cursor: pointer;
 }
