--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,9 +6,6 @@
 <html>
 <head>
   <title>WorkMeOut</title>
-  <link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header>
@@ -64,6 +61,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Left-Chest</p>
     </div>
     <!-- Right chest -->
     <div class="bodypart" id="Right-Chest">
@@ -72,6 +70,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Right Chest</p>
     </div>
     <!-- Abs -->
     <div class="bodypart" id="Abdominals">
@@ -79,6 +78,8 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Abdominals</p>
+
     </div>
     <!-- Right arm -->
     <div class="bodypart" id="Right-Arm">
@@ -86,6 +87,8 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Right Arm</p>
+
     </div>
 
     <div id="arm-image-preview-container">
@@ -100,6 +103,8 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Left-Arm</p>
+
     </div>
 
     <!-- Left leg -->
@@ -229,8 +234,8 @@
     </div>
 
 <!-- <h1 class="rear" id="rear-torso-text"> Back </h1> -->
-       <h2 style="color:white;margin:0px;text-align:center;">back view</h2>
-       <img style="height:30px;width:30px;" src="assets/return.png">
+       <h1 id="back-view">back view</h1>
+        <img style="height:20px;width:20px;" src="assets/return.png">
 
   <h1 class="rear" id="rear-leg-text"> Rear Leg </h1>
 
