--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,7 +70,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
-      <p class="text-preview">Right Chest</p>
+      <p class="text-preview">Right-Chest</p>
     </div>
     <!-- Abs -->
     <div class="bodypart" id="Abdominals">
@@ -87,7 +87,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
-      <p class="text-preview">Right Arm</p>
+      <p class="text-preview">Right<br>Arm</p>
 
     </div>
 
@@ -113,6 +113,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Left-Leg</p>
     </div>
     <!-- Right leg -->
     <div class="bodypart" id="Right-Leg">
@@ -120,6 +121,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Right-Leg</p>
     </div>
 
     <div id="leg-image-preview-container">
@@ -133,6 +135,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Shoulder</p>
     </div>
     <!-- Bicep -->
     <div class="bodypart" id="Bicep">
@@ -140,6 +143,8 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Bicep</p>
+
     </div>
     <!-- Tricep -->
     <div class="bodypart" id="Tricep">
@@ -147,6 +152,8 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Tricep</p>
+
     </div>
     <!-- Forearm -->
     <div class="bodypart" id="Forearm">
@@ -154,6 +161,8 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">ForemArm</p>
+
     </div>
     <!-- Quad -->
     <div class="bodypart" id="Quad">
@@ -161,6 +170,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Quad</p>
     </div>
     <!-- Tibialis -->
     <div class="bodypart" id="Tibialis">
@@ -168,6 +178,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Tibialis</p>
     </div>
     <!-- Hamstring -->
     <div class="bodypart" id="Hamstring">
@@ -175,6 +186,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Hamstring</p>
     </div>
     <!-- Calve -->
     <div class="bodypart" id="Calve">
@@ -182,6 +194,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Calve</p>
     </div>
     <!-- Right glute -->
     <div class="bodypart" id="Right-Glute">
@@ -189,6 +202,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Right-Glute</p>
     </div>
     <!-- Left glute  -->
     <div class="bodypart" id="Left-Glute">
@@ -196,6 +210,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Left-Glute</p>
     </div>
     <!-- Left lat -->
     <div class="bodypart" id="Left-Lat">
@@ -203,6 +218,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Left-Lat</p>
     </div>
     <!-- Right lat -->
     <div class="bodypart" id="Right-Lat">
@@ -210,6 +226,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Right-Lat</p>
     </div>
 
     <div class="bodypart" id="Trapezius">
@@ -217,6 +234,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Trapezius</p>
     </div>
 
     <div class="bodypart" id="Rhomboids">
@@ -224,6 +242,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Rhomboids</p>
     </div>
 
     <div class="bodypart" id="Lower-Back">
@@ -231,6 +250,7 @@
       <div class="dot"></div>
       <div class="pulse"></div>
       </div>
+      <p class="text-preview">Lower-Back</p>
     </div>
 
 <!-- <h1 class="rear" id="rear-torso-text"> Back </h1> -->
