--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -324,8 +324,8 @@ right: 10px;
 
 #right-arm-dot {
   position: absolute;
-  top: 70px;
-  right: 80px;
+  top: 40px;
+  right: 40px;
   margin-top: 80px;
   margin-left: 30px;
   /*position: relative;*/
@@ -361,11 +361,11 @@ right: 10px;
 
 #bicep-dot {
   margin-top: 40px;
-  margin-left: 40px;
+  margin-left: 50px;
   position: relative;
   background: red;
-  bottom: 20px;
-  right: 27px;
+  /*bottom: 20px;*/
+  /*right: 27px;*/
 }
 
 #tricep-dot {
@@ -373,39 +373,40 @@ right: 10px;
   margin-left: 40px;
   position: absolute;
   background: red;
-  bottom: -38px;
-  right: -3px;
+  /*bottom: -38px;*/
+  /*right: -3px;*/
 
 }
 
 #shoulder-dot {
   position: absolute;
   background: red;
-  bottom: -28px;
-  right: -35px;
+  /*bottom: -28px;*/
+  /*right: -5px;*/
 
 }
 
 #forearm-dot {
   position: absolute;
   background: red;
-  bottom: -28px;
-  right: -35px;
+  /*bottom: -28px;*/
+  /*right: -35px;*/
 
 }
 
 #quad-dot {
   position: absolute;
   background: red;
-  bottom: -68px;
-  right: -15px;
+  /*bottom: -68px;*/
+  /*right: -15px;*/
 }
 
 #tibialis-dot {
   position: absolute;
   background: red;
-  bottom: 202px;
-  right: -15px;
+  margin-bottom:80px;
+  /*bottom: 202px;*/
+  /*right: -15px;*/
 }
 
 #hamstring-dot {
@@ -433,7 +434,7 @@ right: 55px;
 
 }
 #left-glute-dot {
-  position: absolute;
+position: absolute;
 background: red;
 bottom: 92px;
 right: 41px;
@@ -441,28 +442,28 @@ right: 41px;
 #right-lat-dot {
 position: absolute;
 background: red;
-bottom: -24px;
-right: 25px;
+/*bottom: -24px;*/
+/*right: 25px;*/
 }
 #left-lat-dot {
-  position: absolute;
+position: absolute;
 background: red;
-bottom: -38px;
-right: -15px;
+/*bottom: -38px;*/
+/*right: -15px;*/
 }
 
 #trapezius-dot {
  position: absolute;
 background: red;
-bottom: 20px;
+/*bottom: 20px;*/
 right: 82px;
 }
 
 #rhomboids-dot {
   position: absolute;
 background: red;
-bottom: -18px;
-right: -68px;
+/*bottom: -18px;*/
+/*right: -68px;*/
 }
 
 #lowerback-dot {
@@ -640,6 +641,8 @@ right: 58px
   border:2px solid black;
   display:inline-block;
   padding: 1px 5px 1px 5px;
-  color: red;
+  color: white;
+  background-color: black;
   font-weight: bold;
+  font-size: 18px;
 }
