--- a/app/assets/stylesheets/arm.css.erb
+++ b/app/assets/stylesheets/arm.css.erb
@@ -5,7 +5,7 @@
   /*background-color: black;*/
   position: absolute;
   top: 153px;
-  right: 300px;
+  right: 557px;
   -webkit-transform: rotate(-8deg);
   opacity: .7;
   border-radius: 50px;
@@ -50,7 +50,7 @@ height: 680px;
   border-radius: 40px;
   position: absolute;
   opacity: .7;
-  background-color: red;
+  /*background-color: red;*/
   left: 680px;
   top: 180px;
 }
@@ -67,7 +67,7 @@ height: 680px;
 position: absolute;
 /*background-color: red;*/
 top: 280px;
-right: 666px;
+right: 680px;
 /*border-radius: 65px;*/
 opacity: .7;
 
@@ -84,7 +84,7 @@ cursor: pointer;
 #Tricep {
 /*height: 158px;*/
 /*width: 33px;*/
-background-color: red;
+/*background-color: red;*/
 position: absolute;
 left: 680px;
 top: 240px;
