--- a/app/assets/stylesheets/glutes.css
+++ b/app/assets/stylesheets/glutes.css
@@ -1,8 +1,8 @@
 #Right-Glute {
   /*height: 131px;*/
   /*width: 95px;*/
-  background-color: red;
-  opacity: .7;
+/*  background-color: red;
+*/  opacity: .7;
   position: absolute;
   bottom: 120px;
   right: 740px;
@@ -17,8 +17,8 @@
 #Left-Glute {
   /*height: 131px;*/
   /*width: 95px;*/
-  background-color: red;
-  opacity: .7;
+/*  background-color: red;
+*/  opacity: .7;
   position: absolute;
   bottom: 120px;
   right: 718px;
